<resources>
    <string name="app_name">Calculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="txtZero">0</string>
    <string name="txtOne">1</string>
    <string name="txtTwo">2</string>
    <string name="txtThree">3</string>
    <string name="txtFour">4</string>
    <string name="txtFive">5</string>
    <string name="txtSix">6</string>
    <string name="txtSeven">7</string>
    <string name="txtEight">8</string>
    <string name="txtNine">9</string>
    <string name="txtDiv">/</string>
    <string name="txtAdd">+</string>
    <string name="txtSub">-</string>
    <string name="txtMul">*</string>
    <string name="txtReset">C</string>
    <string name="txtClear">CC</string>
</resources>
