<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtDisplay"
            android:background="#ffffffff"
            android:padding="5dp" android:layout_margin="5dp"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="4"
            android:rowCount="4">

            <Button android:layout_column="0" android:layout_row="0"
                android:text="@string/txtOne" android:id="@+id/btnOne" />
            <Button android:layout_column="1" android:layout_row="0"
                android:text="@string/txtTwo" android:id="@+id/btnTwo" />
            <Button android:layout_column="2" android:layout_row="0"
                android:text="@string/txtThree" android:id="@+id/btnThree" />
            <Button android:layout_column="0" android:layout_row="1"
                android:text="@string/txtFour" android:id="@+id/btnFour" />
            <Button android:layout_column="1" android:layout_row="1"
                android:text="@string/txtFive" android:id="@+id/btnFive" />
            <Button android:layout_column="2" android:layout_row="1"
                android:text="@string/txtSix" android:id="@+id/btnSix" />
            <Button android:layout_column="0" android:layout_row="2"
                android:text="@string/txtSeven" android:id="@+id/btnSeven" />
            <Button android:layout_column="1" android:layout_row="2"
                android:text="@string/txtEight" android:id="@+id/btnEight" />
            <Button android:layout_column="2" android:layout_row="2"
                android:text="@string/txtNine" android:id="@+id/btnNine" />
            <Button android:layout_column="1" android:layout_row="3"
                android:text="@string/txtZero" android:id="@+id/btnZero" />

        </GridLayout>

    </LinearLayout>

</RelativeLayout>
